<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Guardar"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/guardar_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/Editar"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/Eliminar"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/eliminar_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/Buscar"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/buscar_item"
        app:showAsAction="always" />
</menu>
